--- a/dasboard.html
+++ b/dasboard.html
@@ -9,14 +9,14 @@
 <body class="bg-white text-gray-900">
 
   <!-- Hero Section -->
-  <section class="bg-gray-900 text-white py-20 text-center">
+  <section class="bg-gray-900 text-white py-20 text-center px-4">
     <h1 class="text-5xl font-bold mb-4">PULLER</h1>
-    <p class="text-xl mb-6">Tampil Keren Setiap Hari dengan Koleksi Terbaru</p>
-    <a href="#produk" class="bg-white text-gray-900 font-semibold px-6 py-3 rounded-lg hover:bg-gray-200">Lihat Produk</a>
+    <p class="text-2xl font-bold mb-6">Be Your Own For Every Story</p>
+    <a href="#produk" class="bg-white text-gray-900 font-semibold px-6 py-3 rounded-lg hover:bg-gray-200 transition">Lihat Produk</a>
   </section>
 
   <!-- Keunggulan -->
-  <section class="py-16 max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+  <section class="py-16 px-4 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
     <div>
       <h3 class="text-xl font-semibold mb-2 text-gray-800">Bahan Berkualitas</h3>
       <p class="text-gray-600">Lembut, nyaman, dan tahan lama</p>
@@ -32,26 +32,26 @@
   </section>
 
   <!-- Produk -->
-  <section id="produk" class="bg-gray-100 py-16">
+  <section id="produk" class="bg-gray-100 py-16 px-4">
     <h2 class="text-3xl text-center font-bold mb-10 text-gray-800">Produk Terlaris</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
       <div class="bg-white p-4 shadow rounded-xl">
-        <img src="clayridge.jpg" alt="Panel Hat" class="mb-4 rounded-lg">
+        <img src="clayridge.jpg" alt="Panel Hat" class="mb-4 rounded-lg w-full h-60 object-cover">
         <h4 class="font-semibold mb-2">Puller Five Panel Hat</h4>
         <p class="mb-2 text-gray-700">Rp 97.200</p>
-        <button class="bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800">Beli Sekarang</button>
+        <button class="bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800 transition">Beli Sekarang</button>
       </div>
       <div class="bg-white p-4 shadow rounded-xl">
-        <img src="Lunar Rise.jpg" alt="Panel Hat" class="mb-4 rounded-lg">
+        <img src="Lunar Rise.jpg" alt="Panel Hat" class="mb-4 rounded-lg w-full h-60 object-cover">
         <h4 class="font-semibold mb-2">Puller Five Panel Hat</h4>
         <p class="mb-2 text-gray-700">Rp 97.200</p>
-        <button class="bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800">Beli Sekarang</button>
+        <button class="bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800 transition">Beli Sekarang</button>
       </div>
       <div class="bg-white p-4 shadow rounded-xl">
-        <img src="Rustic Charm.jpg" alt="Panel Hat" class="mb-4 rounded-lg">
+        <img src="Rustic Charm.jpg" alt="Panel Hat" class="mb-4 rounded-lg w-full h-60 object-cover">
         <h4 class="font-semibold mb-2">Puller Five Panel Hat</h4>
         <p class="mb-2 text-gray-700">Rp 97.200</p>
-        <button class="bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800">Beli Sekarang</button>
+        <button class="bg-gray-900 text-white px-4 py-2 rounded hover:bg-gray-800 transition">Beli Sekarang</button>
       </div>
     </div>
   </section>
