--- a/file.html
+++ b/file.html
@@ -1,83 +1,55 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PULLER - Toko Online</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Toko Online</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header { background-color: #000000; color: white; padding: 1em; text-align: center; }
+    nav { background-color: #333; overflow: hidden; }
+    nav a { float: left; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
+    nav a:hover { background-color: #ddd; color: black; }
+    .container { padding: 20px; }
+    .product { border: 1px solid #ccc; border-radius: 5px; padding: 16px; margin: 10px; text-align: center; width: 200px; float: left; }
+    .product img { width: 100%; height: auto; }
+    .product h3 { margin: 10px 0; }
+    .product button { background-color: #4CAF50; color: white; padding: 10px; border: none; cursor: pointer; }
+    .product button:hover { background-color: #45a049; }
+    footer { clear: both; text-align: center; padding: 1em; background-color: #f1f1f1; }
+  </style>
 </head>
-<body class="bg-white text-gray-900 scroll-smooth">
+<body>
 
-  <!-- Header -->
-  <header class="bg-gray-800 text-white">
-    <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-      <h1 class="text-3xl font-bold">PULLER</h1>
-      <nav class="space-x-4">
-        <a href="#produk" class="hover:underline">Koleksi</a>
-        <a href="keranjang.html" class="hover:underline">Keranjang</a>
-      </nav>
-    </div>
+  <header>
+    <h1>Toko Online Max</h1>
   </header>
 
-  <!-- Hero Section -->
-  <section class="bg-gray-900 text-white text-center py-20 px-4">
-    <h2 class="text-5xl font-bold mb-4">Selamat Datang di PULLER</h2>
-    <p class="text-xl mb-6">Temukan gaya terbaikmu dengan produk eksklusif dari kami!</p>
-    <a href="#produk" class="bg-white text-gray-900 px-6 py-3 rounded-lg font-semibold hover:bg-gray-300 transition">Lihat Koleksi</a>
-  </section>
+  <nav>
+    <a href="#">Beranda</a>
+    <a href="#produk">Produk</a>
+    <a href="#kontak">Kontak</a>
+  </nav>
 
-  <!-- Keunggulan -->
-  <section id="keunggulan" class="py-16 px-4 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-    <div>
-      <h3 class="text-xl font-semibold mb-2 text-gray-800">Bahan Berkualitas</h3>
-      <p class="text-gray-600">Lembut, nyaman, dan tahan lama</p>
+  <div class="container" id="produk">
+    <h2>Produk Kami</h2>
+    <div class="product">
+      <img src="Rustic Charm.jpg" alt="Produk 1">
+      <h3>Produk 1</h3>
+      <p>Rp100.000</p>
+      <button>Tambah ke Keranjang</button>
     </div>
-    <div>
-      <h3 class="text-xl font-semibold mb-2 text-gray-800">Desain Kekinian</h3>
-      <p class="text-gray-600">Selalu update dengan tren fashion</p>
+    <div class="product">
+      <img src="Lunar Rise.jpg" alt="Produk 2">
+      <h3>Produk 2</h3>
+      <p>Rp150.000</p>
+      <button>Tambah ke Keranjang</button>
     </div>
-    <div>
-      <h3 class="text-xl font-semibold mb-2 text-gray-800">Harga Terjangkau</h3>
-      <p class="text-gray-600">Mulai dari Rp 90.000!</p>
-    </div>
-  </section>
+    <!-- Tambah produk lainnya di sini -->
+  </div>
 
-  <!-- Daftar Produk -->
-  <section id="produk" class="py-16 bg-gray-100">
-    <h2 class="text-3xl font-bold text-center mb-10 text-gray-800">Produk Terlaris</h2>
-    <a href="index.html" class="hover:underline">← Kembali ke Beranda</a>
-    <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      
-      <!-- Produk 1 -->
-      <div class="bg-white p-4 shadow-lg rounded-lg">
-        <img src="Lunar Rise.jpg" alt="Produk 1" class="mb-4 w-full h-60 object-cover rounded-lg">
-        <h3 class="font-semibold text-xl mb-2">Produk 1</h3>
-        <p class="text-gray-700 mb-2">Harga: Rp 100.000</p>
-        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Beli Sekarang</button>
-      </div>
-
-      <!-- Produk 2 -->
-      <div class="bg-white p-4 shadow-lg rounded-lg">
-        <img src="Rustic Charm.jpg" alt="Produk 2" class="mb-4 w-full h-60 object-cover rounded-lg">
-        <h3 class="font-semibold text-xl mb-2">Produk 2</h3>
-        <p class="text-gray-700 mb-2">Harga: Rp 150.000</p>
-        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Beli Sekarang</button>
-      </div>
-
-      <!-- Produk 3 -->
-      <div class="bg-white p-4 shadow-lg rounded-lg">
-        <img src="clayridge.jpg" alt="Produk 3" class="mb-4 w-full h-60 object-cover rounded-lg">
-        <h3 class="font-semibold text-xl mb-2">Produk 3</h3>
-        <p class="text-gray-700 mb-2">Harga: Rp 150.000</p>
-        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Beli Sekarang</button>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-white text-center py-6 text-sm">
-    &copy; 2025 PULLER. All rights reserved.
+  <footer id="kontak">
+    <p>&copy; 2025 Toko Online Max. Semua Hak Dilindungi.</p>
   </footer>
 
 </body>
