--- a/file.html
+++ b/file.html
@@ -3,26 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Toko Online</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background-color: #000000; color: white; padding: 1em; text-align: center; }
-    nav { background-color: #333; overflow: hidden; }
-    nav a { float: left; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
-    nav a:hover { background-color: #ddd; color: black; }
-    .container { padding: 20px; }
-    .product { border: 1px solid #ccc; border-radius: 5px; padding: 16px; margin: 10px; text-align: center; width: 200px; float: left; }
-    .product img { width: 100%; height: auto; }
-    .product h3 { margin: 10px 0; }
-    .product button { background-color: #4CAF50; color: white; padding: 10px; border: none; cursor: pointer; }
-    .product button:hover { background-color: #45a049; }
-    footer { clear: both; text-align: center; padding: 1em; background-color: #f1f1f1; }
-  </style>
 </head>
 <body>
 
   <header>
-    <h1>Toko Online Max</h1>
+    <h1>Toko Online</h1>
   </header>
 
   <nav>
